Gallery row gap fix

--- a/src/components/Gallery.css
+++ b/src/components/Gallery.css
@@ -2,6 +2,7 @@
     max-width: 100%;
     display: flex;
     flex-wrap: wrap;
+    row-gap: 1.5em;
 }
 
 .gallery-item-div {
